fix(nav): prevent styling div from overflowing nav bar

--- a/styles/scss/layouts/_main-navigation.scss
+++ b/styles/scss/layouts/_main-navigation.scss
@@ -50,6 +50,7 @@ nav {
   overflow: hidden;
   transition: opacity;
   transition-delay: .5s;
+  position: relative;
   p {
     margin: 0 0 0 .5em;
     overflow: hidden;
@@ -69,7 +70,7 @@ nav {
   .colour-block {
     position: absolute;
     top: 0;
-    width: 50%;
+    width: 100%;
     height: 500%;
     background: rgb(109,152,182);
     background: linear-gradient(0deg, rgba(109,152,182,0) 0%, rgba(109,152,182,1) 80%, rgba(109,152,182,1) 100%);
